# xdit-server

./: Dockerfile  README.md  pyproject.toml
app/: app.py  launch_app.py
config/: config.json
